fix: nav-links alignment at 680px (#412)

--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -13,7 +13,7 @@
         padding-block-start: 0;
         padding-block-end: 0;
 
-        @media all and (min-width: 680px) {
+        @media all and (min-width: 681px) {
             justify-content: space-between;
         }
     }
